# oobss

./: .gitignore  .readthedocs.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  matplotlibrc  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: STYLE.md  api.md  examples.md  index.md  overview.md  requirements.txt
docs/javascripts/: mathjax.js
examples/: _sample_utils.py  benchmark_dataset.py  compare_wav_methods.py  separate_wav_cli.py
examples/benchmark/: README.md
examples/benchmark/config/: common.yaml
src/oobss/: __init__.py  cli.py  configs.py  dataset.py  logging_utils.py  plot_utils.py
src/oobss/benchmark/: __init__.py  cli.py  config_loader.py  config_schema.py  engine.py  methods.py  pipeline.py  recipe.py  reporting.py
src/oobss/dataloaders/: __init__.py
src/oobss/evaluation/: __init__.py  framewise.py  metrics.py  si_sdr.py
src/oobss/experiments/: __init__.py  config_loader.py  config_schema.py  dataset.py  methods.py  metrics.py  pipeline.py  recipe.py  torchrir_dynamic.py
src/oobss/postprocess/: __init__.py  separation.py
src/oobss/separators/: __init__.py  auxiva.py  eval_utils.py  ilrma.py  metrics.py  online_auxiva.py  online_ilrma.py  online_isnmf.py  update_rules.py  utils.py
src/oobss/signal/: __init__.py  stft.py
tests/: test_basics.py  test_blockbatch_runners.py  test_config_schema.py  test_corner_cases.py  test_dataset_loader.py  test_experiment_dispatch.py  test_experiment_metrics.py  test_experiment_postprocess.py  test_loss_behavior.py  test_online_isnmf.py  test_plot_utils.py  test_reporting.py  test_seed_reproducibility.py  test_separator_interfaces.py  test_si_sdr_regression.py  test_strategies.py  test_torchrir_dynamic_dataset.py
(+24 files in other folders)
